[package]
name = "stax"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.57", features = ["derive"] }
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
owo-colors = "4.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
